--- a/Invoice_Templates/IT_A4_Tax_4.jrxml
+++ b/Invoice_Templates/IT_A4_Tax_4.jrxml
@@ -6,9 +6,6 @@
 	<parameter name="SUBREPORT_DATA" class="java.util.List"/>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String"/>
 	<parameter name="SUBREPORT_TC_DATA" class="java.util.List"/>
-	<queryString>
-		<![CDATA[]]>
-	</queryString>
 	<field name="CustomerMobileNo" class="java.lang.String"/>
 	<field name="CustomerName" class="java.lang.String"/>
 	<field name="BillNo" class="java.lang.String"/>
@@ -23,6 +20,10 @@
 	<field name="TotalQty" class="java.lang.String"/>
 	<field name="GSTAmount" class="java.lang.String"/>
 	<field name="TotalAmount" class="java.lang.String"/>
+	<field name="ItemDiscAmt" class="java.lang.String"/>
+	<field name="ItemDiscPer" class="java.lang.String"/>
+	<field name="DiscountAmount" class="java.lang.String"/>
+	<field name="DiscountPer" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -99,8 +100,9 @@
 				<text><![CDATA[#]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="20" y="0" width="180" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="4da122dc-9c6b-4d80-88af-364fb24dd82b">
+				<reportElement mode="Opaque" x="20" y="0" width="160" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="4da122dc-9c6b-4d80-88af-364fb24dd82b">
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.25" lineColor="#736F6F"/>
@@ -112,8 +114,9 @@
 				<text><![CDATA[Item Name]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="200" y="0" width="70" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="b81a600a-5147-4aaf-9c9b-888ddad00470">
+				<reportElement mode="Opaque" x="180" y="0" width="60" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="b81a600a-5147-4aaf-9c9b-888ddad00470">
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.25" lineColor="#736F6F"/>
@@ -125,8 +128,9 @@
 				<text><![CDATA[HSN]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="270" y="0" width="50" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="67a13f9f-f3df-4905-a9de-0b123fcfd565">
+				<reportElement mode="Opaque" x="240" y="0" width="39" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="67a13f9f-f3df-4905-a9de-0b123fcfd565">
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.25" lineColor="#736F6F"/>
@@ -138,8 +142,9 @@
 				<text><![CDATA[Qty]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="320" y="0" width="70" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="65f519d6-13e1-435a-8b2a-679a83828abb">
+				<reportElement mode="Opaque" x="279" y="0" width="50" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="65f519d6-13e1-435a-8b2a-679a83828abb">
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.25" lineColor="#736F6F"/>
@@ -151,8 +156,9 @@
 				<text><![CDATA[Rate]]></text>
 			</staticText>
 			<staticText>
-				<reportElement mode="Opaque" x="390" y="0" width="85" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="7ae74138-33bb-4eb5-be0c-b0eadabacaad">
+				<reportElement mode="Opaque" x="400" y="0" width="75" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="7ae74138-33bb-4eb5-be0c-b0eadabacaad">
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<box>
 					<pen lineWidth="0.25" lineColor="#736F6F"/>
@@ -176,13 +182,26 @@
 				</textElement>
 				<text><![CDATA[Amount]]></text>
 			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="329" y="0" width="71" height="20" forecolor="#000000" backcolor="#E3E1E1" uuid="aaeaf3c5-179f-4652-8752-4d93c1b4cd1b">
+					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
+				</reportElement>
+				<box>
+					<pen lineWidth="0.25" lineColor="#736F6F"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
+					<paragraph rightIndent="5"/>
+				</textElement>
+				<text><![CDATA[Discount]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="20" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout"/>
 			<textField>
-				<reportElement x="20" y="0" width="180" height="20" uuid="bcd93a26-8f34-4dff-9510-dd17910639b8">
+				<reportElement x="20" y="0" width="160" height="20" uuid="bcd93a26-8f34-4dff-9510-dd17910639b8">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
 				</reportElement>
@@ -210,7 +229,7 @@
 				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="200" y="0" width="70" height="20" uuid="87a06686-17c9-48c8-93cb-4d9beafa1d89">
+				<reportElement x="180" y="0" width="60" height="20" uuid="87a06686-17c9-48c8-93cb-4d9beafa1d89">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 				</reportElement>
@@ -224,7 +243,7 @@
 				<textFieldExpression><![CDATA[$F{HSN}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="270" y="0" width="50" height="20" uuid="879012c4-18f0-4128-afd3-4120ae541ff1">
+				<reportElement x="240" y="0" width="39" height="20" uuid="879012c4-18f0-4128-afd3-4120ae541ff1">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
@@ -238,7 +257,7 @@
 				<textFieldExpression><![CDATA[$F{Qty}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="320" y="0" width="70" height="20" uuid="0bd1f36a-1ca5-459f-896a-c19d3b7bca98">
+				<reportElement x="279" y="0" width="50" height="20" uuid="0bd1f36a-1ca5-459f-896a-c19d3b7bca98">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
@@ -252,7 +271,7 @@
 				<textFieldExpression><![CDATA[$F{Rate}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="390" y="0" width="85" height="20" uuid="62ffa877-4606-4856-bfd2-b93d3c2f57b9">
+				<reportElement x="400" y="0" width="75" height="20" uuid="62ffa877-4606-4856-bfd2-b93d3c2f57b9">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
@@ -279,12 +298,27 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Amount}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="329" y="0" width="71" height="20" uuid="e44b02f3-a805-4297-ae8a-c557f0a2b715">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+				</reportElement>
+				<box>
+					<pen lineWidth="0.25" lineColor="#736F6F"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="9"/>
+					<paragraph rightIndent="5"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{ItemDiscAmt}+" ("+$F{ItemDiscPer}+"%)"]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<summary>
 		<band height="57" splitType="Stretch">
 			<staticText>
-				<reportElement x="20" y="0" width="180" height="20" uuid="8a6eeeff-593a-4600-930f-c8f38ee0831f">
+				<reportElement x="20" y="0" width="160" height="20" uuid="8a6eeeff-593a-4600-930f-c8f38ee0831f">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
 				</reportElement>
@@ -298,7 +332,7 @@
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="270" y="0" width="50" height="20" uuid="a9e2ccea-eb56-419d-91e9-0fac5b5b7709">
+				<reportElement x="240" y="0" width="39" height="20" uuid="a9e2ccea-eb56-419d-91e9-0fac5b5b7709">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
@@ -312,7 +346,7 @@
 				<textFieldExpression><![CDATA[$F{TotalQty}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="390" y="0" width="85" height="20" uuid="57ec7d74-8d0e-4fea-90de-d8f19235a974">
+				<reportElement x="400" y="0" width="75" height="20" uuid="57ec7d74-8d0e-4fea-90de-d8f19235a974">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
@@ -353,8 +387,8 @@
 				</textElement>
 				<textFieldExpression><![CDATA[""]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement x="320" y="0" width="70" height="20" uuid="dcc70bce-94a9-4c19-bf60-4c32fd79beb5">
+			<staticText>
+				<reportElement x="279" y="0" width="50" height="20" uuid="bc0671cd-3ba4-4bc9-870d-22f999c241cb">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
 				<box>
@@ -363,15 +397,15 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[""]]></textFieldExpression>
-			</textField>
+				<text><![CDATA[]]></text>
+			</staticText>
 			<subreport>
 				<reportElement x="305" y="21" width="250" height="30" uuid="888983b5-485a-4c89-8e01-ef5c67beee98">
 					<property name="com.jaspersoft.studio.unit.x" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{SUBREPORT_DATA})]]></dataSourceExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SR_A4_Tax_3.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SR_A4_Tax_4.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
 				<reportElement x="0" y="21" width="250" height="30" uuid="9208a713-da36-45ab-a578-d04244c1599c">
@@ -381,8 +415,22 @@
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($P{SUBREPORT_TC_DATA})]]></dataSourceExpression>
 				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "SR_A4_Tax_5.jasper"]]></subreportExpression>
 			</subreport>
+			<textField>
+				<reportElement x="329" y="0" width="71" height="20" uuid="c171d3ee-b2ab-42a6-9ce3-f951e83cac7a">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
+				</reportElement>
+				<box>
+					<pen lineWidth="0.25" lineColor="#736F6F"/>
+				</box>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
+					<paragraph rightIndent="5"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{DiscountAmount}]]></textFieldExpression>
+			</textField>
 			<staticText>
-				<reportElement x="200" y="0" width="70" height="20" uuid="a71fc0d2-a525-4816-988c-2541b560afb1">
+				<reportElement x="180" y="0" width="60" height="20" uuid="4cd4a1ad-6540-4e5a-94a4-bea90937616c">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
 				</reportElement>
