--- a/Invoice_Templates/SR_A4_Tax_3.jrxml
+++ b/Invoice_Templates/SR_A4_Tax_3.jrxml
@@ -56,7 +56,7 @@
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 				</reportElement>
 				<box>
-					<pen lineWidth="0.25" lineColor="#736F6F"/>
+					<pen lineWidth="0.25" lineStyle="Solid" lineColor="#736F6F"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="9" isBold="true"/>
@@ -75,7 +75,7 @@
 					<property name="com.jaspersoft.studio.unit.leftIndent" value="px"/>
 				</reportElement>
 				<box>
-					<pen lineWidth="0.25" lineColor="#736F6F"/>
+					<pen lineWidth="0.25" lineStyle="Solid" lineColor="#736F6F"/>
 				</box>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="9" isBold="true"/>
@@ -88,7 +88,7 @@
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
 				<box>
-					<pen lineWidth="0.25" lineColor="#736F6F"/>
+					<pen lineWidth="0.25" lineStyle="Solid" lineColor="#736F6F"/>
 				</box>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font fontName="DejaVu Sans" size="9" isBold="true"/>
