--- a/Invoice_Templates/IT_TH_Cash.jrxml
+++ b/Invoice_Templates/IT_TH_Cash.jrxml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.9.0.final using JasperReports Library version 6.9.0-cb8f9004be492ccc537180b49c026951f4220bf3  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Bill_Print" pageWidth="226" pageHeight="1417" columnWidth="186" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="0814d333-e1dd-4e03-97db-6eae8a46e09f">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Bill_Print" pageWidth="226" pageHeight="1417" columnWidth="198" leftMargin="8" rightMargin="20" topMargin="2" bottomMargin="2" uuid="0814d333-e1dd-4e03-97db-6eae8a46e09f">
 	<property name="com.jaspersoft.studio.unit." value="mm"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="mm"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="mm"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="mm"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="mm"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="mm"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="mm"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="mm"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="mm"/>
 	<parameter name="StoreName" class="java.lang.String"/>
 	<parameter name="Address" class="java.lang.String"/>
 	<parameter name="Address2" class="java.lang.String"/>
@@ -27,29 +35,29 @@
 	<field name="termsCondition" class="java.lang.String"/>
 	<group name="TotalGroup">
 		<groupFooter>
-			<band height="72">
+			<band height="75">
 				<staticText>
 					<reportElement x="0" y="0" width="186" height="11" uuid="e0830128-c59f-42da-af0a-369bf5dbe869">
 						<property name="com.jaspersoft.studio.unit.width" value="mm"/>
 						<property name="com.jaspersoft.studio.unit.height" value="mm"/>
 					</reportElement>
 					<textElement>
-						<font fontName="DejaVu Sans" size="8" isBold="false"/>
+						<font fontName="DejaVu Sans" size="9" isBold="true"/>
 					</textElement>
 					<text><![CDATA[--------------------------------------------------------------------------------------]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="0" y="51" width="186" height="11" uuid="465079f9-2f1d-4da7-982b-1145dd2fad14">
+					<reportElement x="0" y="54" width="186" height="11" uuid="465079f9-2f1d-4da7-982b-1145dd2fad14">
 						<property name="com.jaspersoft.studio.unit.width" value="mm"/>
 						<property name="com.jaspersoft.studio.unit.height" value="mm"/>
 					</reportElement>
 					<textElement>
-						<font fontName="DejaVu Sans" size="8" isBold="false"/>
+						<font fontName="DejaVu Sans" size="9" isBold="true"/>
 					</textElement>
 					<text><![CDATA[--------------------------------------------------------------------------------------]]></text>
 				</staticText>
 				<textField isStretchWithOverflow="true">
-					<reportElement x="0" y="62" width="186" height="10" uuid="b3b761fd-b422-4d08-81b7-8c115ba9de05"/>
+					<reportElement x="0" y="65" width="186" height="10" uuid="b3b761fd-b422-4d08-81b7-8c115ba9de05"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans" size="8" isBold="true"/>
 					</textElement>
@@ -60,7 +68,7 @@
 						<printWhenExpression><![CDATA[!$F{DiscountAmount}.equalsIgnoreCase( "0.00" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
-						<font fontName="DejaVu Sans" size="6"/>
+						<font fontName="DejaVu Sans" size="8"/>
 					</textElement>
 					<text><![CDATA[Sub Total :]]></text>
 				</staticText>
@@ -70,7 +78,7 @@
 						<printWhenExpression><![CDATA[!$F{DiscountAmount}.equalsIgnoreCase( "0.00" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
-						<font fontName="DejaVu Sans" size="6"/>
+						<font fontName="DejaVu Sans" size="8"/>
 						<paragraph rightIndent="2"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{TotalAmountForCashInvoice}]]></textFieldExpression>
@@ -80,7 +88,7 @@
 						<printWhenExpression><![CDATA[!$F{DiscountPer}.equalsIgnoreCase( "0" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
-						<font fontName="DejaVu Sans" size="6"/>
+						<font fontName="DejaVu Sans" size="8"/>
 					</textElement>
 					<text><![CDATA[Disc. (%) :]]></text>
 				</staticText>
@@ -90,15 +98,15 @@
 						<printWhenExpression><![CDATA[!$F{DiscountPer}.equalsIgnoreCase( "0" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
-						<font fontName="DejaVu Sans" size="6"/>
+						<font fontName="DejaVu Sans" size="8"/>
 						<paragraph rightIndent="2"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{DiscountPer}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement x="50" y="41" width="80" height="10" uuid="14d31c11-3ea7-4547-89c4-56b15a1199d9"/>
+					<reportElement x="50" y="41" width="50" height="13" uuid="14d31c11-3ea7-4547-89c4-56b15a1199d9"/>
 					<textElement textAlignment="Right">
-						<font fontName="DejaVu Sans" size="8" isBold="true"/>
+						<font fontName="DejaVu Sans" size="9" isBold="false"/>
 					</textElement>
 					<text><![CDATA[Total :]]></text>
 				</staticText>
@@ -107,7 +115,7 @@
 						<printWhenExpression><![CDATA[!$F{DiscountAmount}.equalsIgnoreCase( "0.00" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
-						<font fontName="DejaVu Sans" size="6"/>
+						<font fontName="DejaVu Sans" size="8"/>
 					</textElement>
 					<text><![CDATA[(-) Disc. Amount :]]></text>
 				</staticText>
@@ -117,17 +125,17 @@
 						<printWhenExpression><![CDATA[!$F{DiscountAmount}.equalsIgnoreCase( "0.00" )]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Right">
-						<font fontName="DejaVu Sans" size="6"/>
+						<font fontName="DejaVu Sans" size="8"/>
 						<paragraph rightIndent="2"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{DiscountAmount}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="130" y="41" width="56" height="10" uuid="50745a58-f193-4886-9793-091c6ea9963d">
+					<reportElement x="100" y="41" width="86" height="13" uuid="50745a58-f193-4886-9793-091c6ea9963d">
 						<property name="com.jaspersoft.studio.unit.rightIndent" value="mm"/>
 					</reportElement>
 					<textElement textAlignment="Right">
-						<font fontName="DejaVu Sans" size="8" isBold="true"/>
+						<font fontName="DejaVu Sans" size="9" isBold="true"/>
 						<paragraph rightIndent="2"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{NetSalesAmount}]]></textFieldExpression>
@@ -150,7 +158,7 @@
 			<staticText>
 				<reportElement x="0" y="59" width="186" height="11" uuid="176a0690-1976-401c-b2e5-3d5507f17368"/>
 				<textElement textAlignment="Center">
-					<font fontName="DejaVu Sans" size="8" isBold="false"/>
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[--------------------------------------------------------------------------------------]]></text>
 			</staticText>
@@ -159,14 +167,14 @@
 					<property name="com.jaspersoft.studio.unit.height" value="mm"/>
 				</reportElement>
 				<textElement textAlignment="Center">
-					<font fontName="DejaVu Sans" size="8" isBold="false"/>
+					<font fontName="DejaVu Sans" size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[--------------------------------------------------------------------------------------]]></text>
 			</staticText>
 			<textField>
 				<reportElement x="0" y="0" width="186" height="16" uuid="3c5f98fb-8ff4-4a21-8b6f-39ace24a309e"/>
 				<textElement textAlignment="Center">
-					<font fontName="DejaVu Sans" size="12" isBold="true"/>
+					<font fontName="DejaVu Sans" size="13" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{StoreName}]]></textFieldExpression>
 			</textField>
@@ -189,7 +197,7 @@
 				<textElement textAlignment="Center">
 					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$P{MobileNumber}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Contact No. "+$P{MobileNumber}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="70" y="70" width="116" height="10" uuid="9b83b983-978c-4904-80cf-66f3637cf9e7"/>
@@ -252,7 +260,7 @@
 					<property name="com.jaspersoft.studio.unit.height" value="mm"/>
 				</reportElement>
 				<textElement textAlignment="Center">
-					<font fontName="DejaVu Sans" size="8" isBold="false"/>
+					<font fontName="DejaVu Sans" size="8" isBold="true"/>
 				</textElement>
 				<text><![CDATA[--------------------------------------------------------------------------------------]]></text>
 			</staticText>
@@ -263,7 +271,7 @@
 			<textField>
 				<reportElement x="0" y="0" width="10" height="11" uuid="15fea380-f263-4cdb-9bcc-c612637fe632"/>
 				<textElement textAlignment="Left">
-					<font fontName="DejaVu Sans" size="6"/>
+					<font fontName="DejaVu Sans" size="8"/>
 					<paragraph leftIndent="2"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
@@ -271,28 +279,28 @@
 			<textField>
 				<reportElement x="10" y="0" width="176" height="11" uuid="65cb4857-6e5b-412c-bd9f-8d228628ded9"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="6"/>
+					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Name}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="70" y="12" width="30" height="11" uuid="01457f21-97a9-49ad-a7bb-2d25403838b0"/>
 				<textElement textAlignment="Right">
-					<font fontName="DejaVu Sans" size="6"/>
+					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Qty}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="100" y="12" width="37" height="11" uuid="5dba300d-4019-43f8-9aa3-89fb68ec9369"/>
 				<textElement textAlignment="Right">
-					<font fontName="DejaVu Sans" size="6"/>
+					<font fontName="DejaVu Sans" size="8"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{Rate}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="137" y="12" width="49" height="11" uuid="c82a2004-6e44-4ade-aa77-03a46293bf4a"/>
 				<textElement textAlignment="Right">
-					<font fontName="DejaVu Sans" size="6"/>
+					<font fontName="DejaVu Sans" size="8"/>
 					<paragraph rightIndent="2"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{ItemAmt}]]></textFieldExpression>
